		Activities: added term filter to manage view
		Activities: fixed PHP warnings in Edit Activity Enrolment when access via My Activities.
		Activities: added upper limit to number of columns in Printable Attendance Sheet
        Activities: fixed total attendance counts to exclude left students
        Activities: fixed PHP notice in Manage Enrolment
		Attendance: added ability (off by default) for students to register themselves as Present, when within a set of IP addresses
		Attendance: added explicitly stored context recording where attendance was taken
		Attendance: added settings to determine pre-filling of attendance in different contexts
		Attendance: added settings to determine default type in different contexts
		Attendance: added dynamic legend for Student History report
		Attendance: added extra role to allow form group attendance to be restricted to own form group
		Attendance: updated Take Attendance by Class to exclude students with timetable exceptions
		Attendance: fixed pre-filled attendance to always display the most recent attendance log
		Attendance: updated pre-filled class attendance to not pre-fill for another class
		Crowd Assessment: fixed parent role determination error
		Data Updater: made various fields optional when user has _any privileges
        Data Updater: fixed PHP notice for empty array in Student Data Updater History
		Finance: added ability to bulk issue invoices without sending email
		Finance: tweaked interface for display of payment log to make it more usable
		Finance: added ability to view and print receipts for refunded invoices
		Finance: fixed bug preventing reminder emails from being sent
		Finance: fixed bug leading to invoice values changing (in print view only) after issue
		Finance: added reminder number to Email Reminder section header in overdue invoice edit view
		Finance: removed incorrectly applied currency label from expense export
		Formal Assessment: improved layout of Internal Assessment view