@@ -36,6 +36,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Finance/expenseRequest_man
     //Check if params are specified
     $gibbonFinanceExpenseID = $_GET['gibbonFinanceExpenseID'];
     $gibbonFinanceBudgetCycleID = $_GET['gibbonFinanceBudgetCycleID'];
+    $status = '';
     $status2 = $_GET['status2'];
     $gibbonFinanceBudgetID2 = $_GET['gibbonFinanceBudgetID2'];
     if ($gibbonFinanceExpenseID == '' or $gibbonFinanceBudgetCycleID == '') {
